Added pages similar-genres and similar-runtime also change the favorites endpoint and updated the swagger docs.
